Change index.html for week-2 solo challenge.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
-	<body>
-		Hello DBC!
-	</body>
+	<head>
+	<title>Steve Jones</title>
+</head>
+
+<body>
+<header class="header">
+	<h1>Steven G. Jones</h1>
+	<p><a href="#">Blog</a> | <a href="#">GitHub</a> | <a href="#"> LinkedIn</a> | <a href="#">Contact</a>
+	</p>
+</header>
+<section>
+	<p>Steve Jones is currently a student in Dev Bootcamp's Phase 0. He is a proud native Chicagoan, and looks forward to attending Dev Bootcamp's onsite program in the Greatest City in the World. Steve holds a BA in philosophy and biology from Lawrence University; he has diverse work and entrepreneurial experience, having worked in basic biomedical research labs, commercial real estate brokerage, and an organic waste recycling startup. He is totally stoked on his current opportuntiy to become a web developer.</p>
+</section>
+</body>
 </html>
