Update links to LinkedIn and contact in index.html and blog/index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <header class="header">
 	<h1>Steven G. Jones</h1>
-	<p><a href="#">Blog</a> | <a href="#">GitHub</a> | <a href="#"> LinkedIn</a> | <a href="#">Contact</a>
+	<p><a href="#">Blog</a> | <a href="#">GitHub</a> | <a href="www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a href="mailto:steven.g.jones88@gmail.com">Contact</a>
 	</p>
 </header><hr />
 <section>
