Create stylesheet and update index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
+<!DOCTYPE html>
 <html>
 	<head>
+	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 	<title>Steve Jones</title>
 </head>
 
 <body>
-<header class="header">
+<header class="background-img" class="header">
 	<h1>Steven G. Jones</h1>
-	<p><a href="#">Blog</a> | <a href="#">GitHub</a> | <a href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a href="mailto:steven.g.jones88@gmail.com">Contact</a>
+	<p class="head-links"><a id="L1" href="#">Blog</a> | <a id="L2" href="#">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a>
 	</p>
-</header><hr />
+<div class="divider"></div>
 <section>
-	<p>Steve Jones is currently a student in Dev Bootcamp's Phase 0. He is a proud native Chicagoan, and looks forward to attending Dev Bootcamp's onsite program in the Greatest City in the World. Steve holds a BA in philosophy and biology from Lawrence University; he has diverse work and entrepreneurial experience, having worked in basic biomedical research labs, commercial real estate brokerage, and an organic waste recycling startup. He is totally stoked on his current opportuntiy to become a web developer.</p>
+	<h3>About Steve:</h3>
+	<p class="about-me1">Steve Jones is currently a student in Dev Bootcamp's Phase 0. He is a proud native Chicagoan, and looks forward to attending Dev Bootcamp's onsite program in the Greatest City in the World.</p>
+
+	<p class="about-me2">Steve holds a BA in philosophy and biology from Lawrence University; he has diverse work and entrepreneurial experience, having worked in basic biomedical research labs, commercial real estate brokerage, and an organic waste recycling startup.
+
+	<p class="about-me3">He is excited to learn the art and science of writing code!</p>
 </section>
+</header>
 </body>
 </html>
