--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<title>Steve Jones</title>
 </head>
 
-<body>
-<header class="background-img" class="header">
+<body class="background-img">
+<header class="header">
 	<h1>Steven G. Jones</h1>
 	<p class="head-links"><a id="L1" href="#">Blog</a> | <a id="L2" href="#">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a>
 	</p>
+</header>
 <div class="divider"></div>
 <section>
 	<h3>About Steve:</h3>
@@ -19,6 +20,5 @@
 
 	<p class="about-me3">He is excited to learn the art and science of writing code!</p>
 </section>
-</header>
 </body>
 </html>
