--- a/projects/index.html
+++ b/projects/index.html
@@ -14,8 +14,7 @@
 <div class="divider"></div>
 <h3>Projects:</h3>
 <ul>
-	<li><a href="http://sjones88.github.io/blog/git.html">Sample Link 1</a></li>
-	<li><a href="http://sjones88.github.io/blog/css-concepts.html">Sample Link 2</a></li>
+	<li><a href="http://sjones88.github.io/projects/cheat-sheet.html">Cheat Sheet</a></li>
 </ul>
 </body>
 </html>
