--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="background-img">
 <header class="header">
 	<h1>Steven G. Jones</h1>
-	<p class="head-links"><a id="L1" href="blog/index.html">Blog</a> | <a id="L2" href="https://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a>
+	<p class="head-links"><a id="L1" href="blog/index.html">Blog</a> | <a id="L2" href="https://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a> | <a id="L5" href="sjones88.github.io/projects">Projects</a>
 	</p>
 </header>
 <div class="divider"></div>
