--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  	<script type="text/javascript" src="index-jquery.js"></script>
 	<title>Steve Jones</title>
 </head>
 
