Update css, html and jquery for index page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="index-redux-stylesheet.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  	<script type="text/javascript" src="index-jquery-redux.js"></script>
+	<title>Steve Jones</title>
+</head>
+<body>
+<header>
+	<h1>Steven G. Jones</h1>
+	<span class="head-links"><a id="L1" href="blog/index.html">Blog</a> | <a id="L2" href="https://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a> | <a id="L5" href="sjones88.github.io/projects">Projects</a>
+	</span>
+</header>
+<div class="divider"></div>
+<section>
+	<!-- <div class="divider"></div> -->
+	<h3>About Steve:</h3>
+	<div class="screen1"><p class="about-me1">Steve Jones is an aspiring software developer and is currently a student at Dev Bootcamp Chicago. He is a proud native Chicagoan.</p></div>
+
+	<div class="screen2"><p class="about-me2">Steve holds a BA in philosophy and biology from Lawrence University; he has diverse work and entrepreneurial experience, having worked as a lab tech in biomedical research, in commercial real estate brokerage, and at an organic waste recycling startup.</p></div>
+
+	<div class="screen3"><p class="about-me3">Steve loves to learn and create, and he is excited about building beautiful things with code.</p></div>
+</section>
+</body>
+</html>
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html>
 	<head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -25,3 +58,4 @@
 </section>
 </body>
 </html>
+ -->
