--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
 	</header>
 <div class="divider"></div>
 <h3>Projects:</h3>
-<ul>
+<ul class="posts">
 	<li><a href="http://sjones88.github.io/projects/cheat-sheet.html">Cheat Sheet</a></li>
 </ul>
 </body>
