--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
 <body class="container">
 	<header class="header">
 	<h1><a href="http://sjones88.github.io/index.html">Steven G. Jones</a></h1>
-	<p class="head-links"><a id="L1" href="#">Blog</a> | <a id="L2" href="http://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a>
+	<p class="head-links"><a id="L1" href="http://sjones88.github.io/blog/index.html">Blog</a> | <a id="L2" href="http://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a>
 	</p>
 	</header>
 <div class="divider"></div>
