--- a/projects/index.html
+++ b/projects/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
-	<link rel="stylesheet" type="text/css" href="../stylesheets/blog.css">
-	<title>Projects</title>
-</head>
-<body class="container">
-	<header class="header">
-	<h1><a href="http://sjones88.github.io/index.html">Steven G. Jones</a></h1>
-	<p class="head-links"><a id="L1" href="http://sjones88.github.io/blog/index.html">Blog</a> | <a id="L2" href="http://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a>
-	</p>
-	</header>
-<div class="divider"></div>
-<h3>Projects:</h3>
-<ul class="posts">
-	<li><a href="http://sjones88.github.io/projects/cheat-sheet.html">Cheat Sheet</a></li>
-</ul>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
+		<link rel="stylesheet" type="text/css" href="../stylesheets/blog.css">
+		<title>Projects</title>
+	</head>
+	<body class="container">
+		<header class="header">
+		<h1><a href="../index.html">Steven G. Jones</a></h1>
+			<ul>
+				<li><a href="../blog/index.html">Blog</a></li>
+				<li><a href="https://github.com/sjones88">GitHub</a></li>
+				<li><a href="http://www.linkedin.com/in/stevengjones88">LinkedIn</a></li>
+				<li><a href="mailto:steven.g.jones88@gmail.com">Contact</a></li>
+				<li><a href="#">Projects</a></li>
+			</ul>
+		</header>
+		<div class="divider"></div>
+		<h3>Projects:</h3>
+		<ul class="posts">
+			<li><a href="http://sjones88.github.io/projects/cheat-sheet.html">Cheat Sheet</a></li>
+		</ul>
+	</body>
+	<footer>
+		<p>Copyright &copy 2016 Steven G. Jones</p>
+	</footer>
 </html>
