--- a/index.html
+++ b/index.html
@@ -1,61 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  	<script type="text/javascript" src="index-jquery.js"></script>
-	<title>Steve Jones</title>
-</head>
-<body>
-<header>
-	<h1>Steven G. Jones</h1>
-	<span class="head-links"><a id="L1" href="blog/index.html">Blog</a> | <a id="L2" href="https://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a> | <a id="L5" href="sjones88.github.io/projects">Projects</a>
-	</span>
-</header>
-<div class="divider"></div>
-<section>
-	<!-- <div class="divider"></div> -->
-	<h3>About Steve:</h3>
-	<div class="screen1"><p class="about-me1">Steve Jones is an aspiring software developer and is currently a student at Dev Bootcamp Chicago. He is a proud native Chicagoan.</p></div>
-
-	<div class="screen2"><p class="about-me2">Steve holds a BA in philosophy and biology from Lawrence University; he has diverse work and entrepreneurial experience, having worked as a lab tech in biomedical research, in commercial real estate brokerage, and at an organic waste recycling startup.</p></div>
-
-	<div class="screen3"><p class="about-me3">Steve loves to learn and create, and he is excited about building beautiful things with code.</p></div>
-</section>
-</body>
-</html>
-
-
-
-
-<!-- Version 1.0.0 -->
-
-<!-- <!DOCTYPE html>
-<html>
 	<head>
-	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  	<script type="text/javascript" src="index-jquery.js"></script>
-	<title>Steve Jones</title>
-</head>
+		<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	  	<script type="text/javascript" src="index-jquery.js"></script>
+		<title>Steve Jones</title>
+	</head>
+	<body>
+		<header>
+			<h1><a id="home-link" href="#">Steven G. Jones</a></h1>
+			<ul>
+				<li id='blog-link'><a href="blog/index.html">Blog</a></li>
+				<li><a href="https://github.com/sjones88">GitHub</a></li>
+				<li><a href="http://www.linkedin.com/in/stevengjones88">LinkedIn</a></li>
+				<li><a href="mailto:steven.g.jones88@gmail.com">Contact</a></li>
+				<li><a id='projects-link' href="projects/index.html">Projects</a></li>
+			</ul>
+		</header>
+		<div class="divider"></div>
+		<section>
+			<div class="index">
+				<h3>About:</h3>
+				<div class="screen1 screen"><p class="about-me1"><b>Steve is a web developer.</b></p></div>
 
-<body class="background-img">
-<header class="header">
-	<h1>Steven G. Jones</h1>
-	<p class="head-links"><a id="L1" href="blog/index.html">Blog</a> | <a id="L2" href="https://github.com/sjones88">GitHub</a> | <a id="L3" href="http://www.linkedin.com/in/stevengjones88"> LinkedIn</a> | <a id="L4" href="mailto:steven.g.jones88@gmail.com">Contact</a> | <a id="L5" href="sjones88.github.io/projects">Projects</a>
-	</p>
-</header>
-<div class="divider"></div>
-<section>
-	<h3>About Steve:</h3>
-	<p class="about-me1">Steve Jones is currently a student in Dev Bootcamp's Phase 0. He is a proud native Chicagoan, and looks forward to attending Dev Bootcamp's onsite program in the Greatest City in the World.</p>
+				<div class="screen2 screen"><p class="about-me2"><b>He's a graduate of <a href="https://twitter.com/devbootcamp">@devbootcamp</a>.</b></p></div>
 
-	<p class="about-me2">Steve holds a BA in philosophy and biology from Lawrence University; he has diverse work and entrepreneurial experience, having worked in basic biomedical research labs, commercial real estate brokerage, and an organic waste recycling startup.
-
-	<p class="about-me3">He is excited to learn the art and science of writing code!</p>
-</section>
-</body>
+				<div class="screen3 screen"><p class="about-me3"><b>Steve is currently looking for challenging full-time opportunities in Chicago.</b></p></div>
+			</div>
+		</section>
+		<div class="blog-post-list">
+			<h3>Blog Posts:</h3>
+			<ul class="posts">
+				<li><a href="blog/git.html">Version Control</a></li>
+				<li><a href="blog/css-concepts.html">CSS: Positioning</a></li>
+				<li><a href="blog/arrays_hashes_post.html">Arrays and Hashes in Ruby</a></li>
+				<li><a href="blog/enumerable-methods.html">Enumerable Methods</a></li>
+				<li><a href="blog/ruby-classes.html">Ruby Classes</a></li>
+				<li><a href="blog/JavaScript.html">JavaScript Objects vs. Ruby Hashes</a></li>
+				<li><a href="blog/tech.html">Web Security: Oxymoron or Wishful Thinking?</a></li>
+				<li><a href="https://www.refheap.com/113144">Rubeque Solution: Happy Numbers</a></li>
+			</ul>
+		</div>
+		<div class="projects-list">
+			<h3>Projects:</h3>
+			<ul class="posts">
+				<li><a href="http://dbc-ambrosia.herokuapp.com">Ambrosia</a></li>
+				<li><a href="http://sjones88.github.io/projects/cheat-sheet.html">Cheat Sheet</a></li>
+			</ul>
+		</div>
+	</body>
+	<footer>
+		<p>Copyright &copy 2016 Steven G. Jones</p>
+	</footer>
 </html>
- -->
