update blog post order

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 		<div class="blog-post-list">
 			<h3>Blog Posts:</h3>
 			<ul class="posts">
-				<li><a href="blog/git.html">Version Control</a></li>
-				<li><a href="blog/css-concepts.html">CSS: Positioning</a></li>
-				<li><a href="blog/arrays_hashes_post.html">Arrays and Hashes in Ruby</a></li>
-				<li><a href="blog/enumerable-methods.html">Enumerable Methods</a></li>
-				<li><a href="blog/ruby-classes.html">Ruby Classes</a></li>
-				<li><a href="blog/JavaScript.html">JavaScript Objects vs. Ruby Hashes</a></li>
-				<li><a href="blog/tech.html">Web Security: Oxymoron or Wishful Thinking?</a></li>
-				<li><a href="https://www.refheap.com/113144">Rubeque Solution: Happy Numbers</a></li>
+				<li><a href="https://www.refheap.com/113144">Rubeque Solution: Happy Numbers | 12-20-2015</a></li>
+				<li><a href="blog/tech.html">Web Security: Oxymoron or Wishful Thinking? | 12-14-2015</a></li>
+				<li><a href="blog/JavaScript.html">JavaScript Objects vs. Ruby Hashes | 12-07-2015</a></li>
+				<li><a href="blog/ruby-classes.html">Ruby Classes | 12-01-2015</a></li>
+				<li><a href="blog/enumerable-methods.html">Enumerable Methods | 11-23-2015</a></li>
+				<li><a href="blog/arrays_hashes_post.html">Arrays and Hashes in Ruby | 11-15-2015</a></li>
+				<li><a href="blog/css-concepts.html">CSS: Positioning | 11-08-2015</a></li>
+				<li><a href="blog/git.html">Version Control | 10-26-2015</a></li>
 			</ul>
 		</div>
 		<div class="projects-list">
